cypher2sql/src/test/resources/grammar/should_fail/invalid_match.cypher
MATCH a b c d
RETURN a